--- a/actix-server/Cargo.toml
+++ b/actix-server/Cargo.toml
@@ -21,7 +21,7 @@ path = "src/lib.rs"
 default = []
 
 [dependencies]
-actix-service = "1.0.0-alpha.4"
+actix-service = "1.0.0"
 actix-rt = "1.0.0-alpha.3"
 actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.3"
