--- a/actix-testing/Cargo.toml
+++ b/actix-testing/Cargo.toml
@@ -18,9 +18,9 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-rt = "1.0.0-alpha.3"
-actix-macros = "0.1.0-alpha.1"
+actix-macros = "0.1.0"
 actix-server = "1.0.0-alpha.3"
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 
 log = "0.4"
 net2 = "0.2"
