--- a/actix-utils/Cargo.toml
+++ b/actix-utils/Cargo.toml
@@ -18,7 +18,7 @@ name = "actix_utils"
 path = "src/lib.rs"
 
 [dependencies]
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 actix-rt = "1.0.0-alpha.3"
 actix-codec = "0.2.0"
 bytes = "0.5.2"
