Simplify oneshot and mpsc implementations

--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -36,7 +36,7 @@ uri = ["http"]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.3"
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
 derive_more = "0.99.2"
 either = "1.5.2"
 futures = "0.3.1"
