--- a/actix-macros/Cargo.toml
+++ b/actix-macros/Cargo.toml
@@ -18,4 +18,4 @@ quote = "^1"
 syn = { version = "^1", features = ["full"] }
 
 [dev-dependencies]
-actix-rt = { version = "1.0.0-alpha.3" }
+actix-rt = { version = "1.0.0" }
