--- a/actix-testing/Cargo.toml
+++ b/actix-testing/Cargo.toml
@@ -17,7 +17,7 @@ name = "actix_testing"
 path = "src/lib.rs"
 
 [dependencies]
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
 actix-macros = "0.1.0"
 actix-server = "1.0.0-alpha.3"
 actix-service = "1.0.0"
