--- a/actix-tls/Cargo.toml
+++ b/actix-tls/Cargo.toml
@@ -35,7 +35,7 @@ nativetls = ["native-tls", "tokio-tls"]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
 actix-utils = "1.0.0-alpha.3"
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
 derive_more = "0.99.2"
 either = "1.5.2"
 futures = "0.3.1"
