--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -35,7 +35,7 @@ uri = ["http"]
 [dependencies]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
-actix-utils = "1.0.0-alpha.3"
+actix-utils = "1.0.0"
 actix-rt = "1.0.0"
 derive_more = "0.99.2"
 either = "1.5.2"
