--- a/actix-ioframe/Cargo.toml
+++ b/actix-ioframe/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
-actix-utils = "1.0.0-alpha.2"
+actix-utils = "1.0.0"
 actix-rt = "1.0.0"
 bytes = "0.5"
 either = "1.5.2"
