--- a/actix-testing/Cargo.toml
+++ b/actix-testing/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-testing"
-version = "1.0.0-alpha.3"
+version = "1.0.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix testing utils"
 keywords = ["network", "framework", "async", "futures"]
@@ -19,7 +19,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-rt = "1.0.0"
 actix-macros = "0.1.0"
-actix-server = "1.0.0-alpha.3"
+actix-server = "1.0.0"
 actix-service = "1.0.0"
 
 log = "0.4"
