--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,21 +60,21 @@ secure-cookies = ["actix-http/secure-cookies"]
 fail = ["actix-http/fail"]
 
 # openssl
-openssl = ["open-ssl", "actix-tls/openssl", "awc/openssl"]
+openssl = ["actix-tls/openssl", "awc/openssl"]
 
 # rustls
-rustls = ["rust-tls", "actix-tls/rustls", "awc/rustls"]
+rustls = ["actix-tls/rustls", "awc/rustls"]
 
 [dependencies]
-actix-codec = "0.2.0-alpha.3"
-actix-service = "1.0.0-alpha.4"
-actix-utils = "1.0.0-alpha.3"
+actix-codec = "0.2.0"
+actix-service = "1.0.0"
+actix-utils = "1.0.1"
 actix-router = "0.2.0"
-actix-rt = "1.0.0-alpha.3"
-actix-server = "1.0.0-alpha.4"
-actix-testing = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
+actix-server = "1.0.0"
+actix-testing = "1.0.0"
 actix-threadpool = "0.3.0"
-actix-tls = { version = "1.0.0-alpha.3" }
+actix-tls = "1.0.0"
 
 actix-web-codegen = "0.2.0-alpha.2"
 actix-http = "1.0.0-alpha.4"
@@ -96,19 +96,17 @@ serde_urlencoded = "0.6.1"
 time = "0.1.42"
 url = "2.1"
 
-# ssl support
-open-ssl = { version="0.10", package="openssl", optional = true }
-rust-tls = { version = "0.16", package="rustls", optional = true }
-
 [dev-dependencies]
 # actix = "0.8.3"
-actix-connect = "1.0.0-alpha.3"
+actix-connect = "1.0.0"
 actix-http-test = "1.0.0-alpha.3"
 rand = "0.7"
 env_logger = "0.6"
 serde_derive = "1.0"
 brotli = "3.3.0"
 flate2 = "1.0.2"
+open-ssl = { version="0.10", package = "openssl" }
+rust_tls = { version = "0.16.0", package = "rustls" }
 
 [profile.release]
 lto = true
