--- a/actix-cors/Cargo.toml
+++ b/actix-cors/Cargo.toml
@@ -18,9 +18,9 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = "2.0.0-alpha.3"
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 derive_more = "0.99.2"
 futures = "0.3.1"
 
 [dev-dependencies]
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
