--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/lib.rs"
 [dependencies]
 actix-web = { version = "2.0.0-alpha.3", default-features = false }
 actix-http = "1.0.0-alpha.3"
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 bitflags = "1"
 bytes = "0.5.2"
 futures = "0.3.1"
@@ -32,5 +32,5 @@ percent-encoding = "2.1"
 v_htmlescape = "0.4"
 
 [dev-dependencies]
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
 actix-web = { version = "2.0.0-alpha.3", features=["openssl"] }
