--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -18,13 +18,13 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = { version = "2.0.0-alpha.3", default-features = false, features = ["secure-cookies"] }
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 futures = "0.3.1"
 serde = "1.0"
 serde_json = "1.0"
 time = "0.1.42"
 
 [dev-dependencies]
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
 actix-http = "1.0.0-alpha.3"
 bytes = "0.5.2"
