--- a/actix-session/Cargo.toml
+++ b/actix-session/Cargo.toml
@@ -25,7 +25,7 @@ cookie-session = ["actix-web/secure-cookies"]
 
 [dependencies]
 actix-web = "2.0.0-alpha.3"
-actix-service = "1.0.0-alpha.3"
+actix-service = "1.0.0"
 bytes = "0.5.2"
 derive_more = "0.99.2"
 futures = "0.3.1"
@@ -34,4 +34,4 @@ serde_json = "1.0"
 time = "0.1.42"
 
 [dev-dependencies]
-actix-rt = "1.0.0-alpha.3"
+actix-rt = "1.0.0"
