--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -27,17 +27,17 @@ path = "src/lib.rs"
 default = []
 
 # openssl
-openssl = ["open-ssl", "awc/openssl", ] # "actix-tls/openssl"]
+openssl = ["open-ssl", "awc/openssl"]
 
 [dependencies]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
 actix-connect = "1.0.0"
-actix-utils = "1.0.0"
+actix-utils = "1.0.3"
 actix-rt = "1.0.0"
 actix-server = "1.0.0"
 actix-testing = "1.0.0"
-awc = "1.0.0-alpha.3"
+awc = "1.0.0"
 
 base64 = "0.11"
 bytes = "0.5.2"
@@ -55,5 +55,5 @@ time = "0.1"
 open-ssl = { version="0.10", package="openssl", optional = true }
 
 [dev-dependencies]
-actix-web = "2.0.0-alpha.3"
-actix-http = "1.0.0-alpha.3"
+actix-web = "2.0.0-alpha.4"
+actix-http = "1.0.0"
