--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-codegen"
-version = "0.2.0-alpha.2"
+version = "0.2.0"
 description = "Actix web proc macros"
 readme = "README.md"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
@@ -17,8 +17,6 @@ syn = { version = "^1", features = ["full", "parsing"] }
 proc-macro2 = "^1"
 
 [dev-dependencies]
-actix-rt = { version = "1.0.0-alpha.2" }
-actix-web = { version = "2.0.0-alpha.2" }
-actix-http = { version = "1.0.0-alpha.3", features=["openssl"] }
-actix-http-test = { version = "1.0.0-alpha.3", features=["openssl"] }
+actix-rt = { version = "1.0.0" }
+actix-web = { version = "2.0.0-alpha.4" }
 futures = { version = "0.3.1" }
