--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -42,7 +42,7 @@ actix-rt = "1.0.0"
 base64 = "0.11"
 bytes = "0.5.2"
 derive_more = "0.99.2"
-futures = "0.3.1"
+futures-core = "0.3.1"
 log =" 0.4"
 mime = "0.3"
 percent-encoding = "2.1"
@@ -63,5 +63,6 @@ actix-server = "1.0.0"
 actix-tls = { version = "1.0.0", features=["openssl", "rustls"] }
 brotli = "3.3.0"
 flate2 = "1.0.13"
+futures = "0.3.1"
 env_logger = "0.6"
 webpki = "0.21"
