--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-files"
-version = "0.2.0-alpha.3"
+version = "0.2.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Static files support for actix web."
 readme = "README.md"
@@ -18,11 +18,11 @@ name = "actix_files"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "2.0.0-alpha.3", default-features = false }
-actix-http = "1.0.0-alpha.3"
+actix-web = { version = "2.0.0-alpha.5", default-features = false }
+actix-http = "1.0.0"
 actix-service = "1.0.0"
 bitflags = "1"
-bytes = "0.5.2"
+bytes = "0.5.3"
 futures = "0.3.1"
 derive_more = "0.99.2"
 log = "0.4"
@@ -33,4 +33,4 @@ v_htmlescape = "0.4"
 
 [dev-dependencies]
 actix-rt = "1.0.0"
-actix-web = { version = "2.0.0-alpha.3", features=["openssl"] }
+actix-web = { version = "2.0.0-alpha.5", features=["openssl"] }
