--- a/actix-connect/Cargo.toml
+++ b/actix-connect/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-connect"
-version = "1.0.0"
+version = "1.0.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix connect - tcp connector service"
 keywords = ["network", "framework", "async", "futures"]
@@ -34,14 +34,15 @@ uri = ["http"]
 [dependencies]
 actix-service = "1.0.0"
 actix-codec = "0.2.0"
-actix-utils = "1.0.0"
+actix-utils = "1.0.3"
 actix-rt = "1.0.0"
 derive_more = "0.99.2"
 either = "1.5.2"
 futures = "0.3.1"
 http = { version = "0.2.0", optional = true }
 log = "0.4"
-trust-dns-resolver = { version="0.18.0-alpha.2", default-features = false, features=["tokio"] }
+trust-dns-proto = "=0.18.0-alpha.2"
+trust-dns-resolver = "=0.18.0-alpha.2"
 
 # openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
@@ -53,5 +54,5 @@ tokio-rustls = { version = "0.12.0", optional = true }
 webpki = { version = "0.21", optional = true }
 
 [dev-dependencies]
-bytes = "0.5.2"
+bytes = "0.5.3"
 actix-testing = { version="1.0.0" }
