--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,11 +93,11 @@ open-ssl = { version="0.10", package = "openssl", optional = true }
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
 
 [dev-dependencies]
-actix = "0.9.0-alpha.1"
+actix = "0.9.0-alpha.2"
 rand = "0.7"
 env_logger = "0.6"
 serde_derive = "1.0"
-brotli = "3.3.0"
+brotli2 = "0.3.2"
 flate2 = "1.0.13"
 
 [profile.release]
