--- a/actix-files/Cargo.toml
+++ b/actix-files/Cargo.toml
@@ -18,8 +18,8 @@ name = "actix_files"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "2.0.0-alpha.6", default-features = false }
-actix-http = "1.0.0"
+actix-web = { version = "2.0.0-rc", default-features = false }
+actix-http = "1.0.1"
 actix-service = "1.0.0"
 bitflags = "1"
 bytes = "0.5.3"
@@ -33,4 +33,4 @@ v_htmlescape = "0.4"
 
 [dev-dependencies]
 actix-rt = "1.0.0"
-actix-web = { version = "2.0.0-alpha.6", features=["openssl"] }
+actix-web = { version = "2.0.0-rc", features=["openssl"] }
