--- a/actix-web-codegen/Cargo.toml
+++ b/actix-web-codegen/Cargo.toml
@@ -18,5 +18,5 @@ proc-macro2 = "^1"
 
 [dev-dependencies]
 actix-rt = { version = "1.0.0" }
-actix-web = { version = "2.0.0-alpha.4" }
+actix-web = { version = "2.0.0-rc" }
 futures = { version = "0.3.1" }
