--- a/actix-cors/Cargo.toml
+++ b/actix-cors/Cargo.toml
@@ -17,7 +17,7 @@ name = "actix_cors"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = "2.0.0-alpha.5"
+actix-web = "2.0.0-rc"
 actix-service = "1.0.0"
 derive_more = "0.99.2"
 futures = "0.3.1"
