--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -17,7 +17,7 @@ name = "actix_identity"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "2.0.0-alpha.5", default-features = false, features = ["secure-cookies"] }
+actix-web = { version = "2.0.0-rc", default-features = false, features = ["secure-cookies"] }
 actix-service = "1.0.0"
 futures = "0.3.1"
 serde = "1.0"
@@ -26,5 +26,5 @@ time = "0.1.42"
 
 [dev-dependencies]
 actix-rt = "1.0.0"
-actix-http = "1.0.0"
+actix-http = "1.0.1"
 bytes = "0.5.3"
