--- a/actix-web-actors/Cargo.toml
+++ b/actix-web-actors/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-web-actors"
-version = "2.0.0-alpha.1"
+version = "2.0.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Actix actors support for actix web framework."
 readme = "README.md"
@@ -16,9 +16,9 @@ name = "actix_web_actors"
 path = "src/lib.rs"
 
 [dependencies]
-actix = "0.9.0-alpha.1"
-actix-web = "2.0.0-alpha.5"
-actix-http = "1.0.0"
+actix = "0.9.0"
+actix-web = "2.0.0-rc"
+actix-http = "1.0.1"
 actix-codec = "0.2.0"
 bytes = "0.5.2"
 futures = "0.3.1"
