--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,11 +67,11 @@ actix-rt = "1.0.0"
 actix-server = "1.0.0"
 actix-testing = "1.0.0"
 actix-macros = "0.1.0"
-actix-threadpool = "0.3.0"
+actix-threadpool = "0.3.1"
 actix-tls = "1.0.0"
 
 actix-web-codegen = "0.2.0"
-actix-http = "1.0.0"
+actix-http = "1.0.1"
 awc = { version = "1.0.1", default-features = false }
 
 bytes = "0.5.3"
@@ -93,7 +93,7 @@ open-ssl = { version="0.10", package = "openssl", optional = true }
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
 
 [dev-dependencies]
-actix = "0.9.0-alpha.2"
+actix = "0.9.0"
 rand = "0.7"
 env_logger = "0.6"
 serde_derive = "1.0"
