--- a/router/Cargo.toml
+++ b/router/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-router"
-version = "0.2.4"
+version = "0.3.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Path router"
 keywords = ["actix"]
@@ -18,10 +18,11 @@ path = "src/lib.rs"
 default = ["http"]
 
 [dependencies]
-regex = "1.3.1"
-serde = "1.0.104"
 bytestring = "0.1.2"
+either = "1.5.3"
+regex = "1.3.1"
 log = "0.4.8"
+serde = "1.0.104"
 http = { version="0.2.0", optional=true }
 
 [dev-dependencies]
