--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "actix-identity"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Identity service for actix web framework."
 readme = "README.md"
@@ -10,15 +10,14 @@ repository = "https://github.com/actix/actix-web.git"
 documentation = "https://docs.rs/actix-identity/"
 license = "MIT/Apache-2.0"
 edition = "2018"
-workspace = ".."
 
 [lib]
 name = "actix_identity"
 path = "src/lib.rs"
 
 [dependencies]
-actix-web = { version = "2.0.0-rc", default-features = false, features = ["secure-cookies"] }
-actix-service = "1.0.1"
+actix-web = { version = "2.0.0", default-features = false, features = ["secure-cookies"] }
+actix-service = "1.0.2"
 futures = "0.3.1"
 serde = "1.0"
 serde_json = "1.0"
