--- a/actix-identity/Cargo.toml
+++ b/actix-identity/Cargo.toml
@@ -21,7 +21,7 @@ actix-service = "1.0.2"
 futures = "0.3.1"
 serde = "1.0"
 serde_json = "1.0"
-time = "0.1.42"
+time = { version = "0.2.5", default-features = false, features = ["std"] }
 
 [dev-dependencies]
 actix-rt = "1.0.0"
