--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -44,7 +44,6 @@ actix-tls = { version = "1.0.0", optional = true }
 base64 = "0.11"
 bitflags = "1.2"
 bytes = "0.5.3"
-copyless = "0.1.4"
 derive_more = "0.99.2"
 either = "1.5.3"
 encoding_rs = "0.8"
@@ -57,7 +56,6 @@ http = "0.2.0"
 httparse = "1.3"
 indexmap = "1.3"
 lazy_static = "1.4"
-language-tags = "0.2"
 log = "0.4"
 mime = "0.3"
 percent-encoding = "2.1"
@@ -78,10 +76,11 @@ ring = { version = "0.16.9", optional = true }
 brotli2 = { version="0.3.2", optional = true }
 flate2 = { version = "1.0.13", optional = true }
 
+tokio = "=0.2.6"
+
 [dev-dependencies]
 actix-server = "1.0.0"
 actix-connect = { version = "1.0.0", features=["openssl"] }
-actix-http-test = { version = "1.0.0", features=["openssl"] }
 actix-tls = { version = "1.0.0", features=["openssl"] }
 futures = "0.3.1"
 env_logger = "0.7"
