--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -40,9 +40,12 @@ actix-service = "1.0.1"
 actix-codec = "0.2.0"
 actix-connect = "1.0.1"
 actix-utils = "1.0.3"
+actix-macros = "0.1.0"
 actix-rt = "1.0.0"
+actix-router = "0.2.4"
+actix-server = "1.0.0"
 actix-threadpool = "0.3.1"
-actix-tls = { version = "1.0.0", optional = true }
+actix-tls = { version = "1.0.0" }
 
 base64 = "0.11"
 bitflags = "1.2"
@@ -50,9 +53,7 @@ bytes = "0.5.3"
 derive_more = "0.99.2"
 either = "1.5.3"
 encoding_rs = "0.8"
-futures-core = "0.3.1"
-futures-util = "0.3.1"
-futures-channel = "0.3.1"
+futures = "0.3.1"
 fxhash = "0.2.1"
 h2 = "0.2.1"
 http = "0.2.0"
@@ -61,15 +62,17 @@ indexmap = "1.3"
 lazy_static = "1.4"
 log = "0.4"
 mime = "0.3"
+net2 = "0.2.33"
 percent-encoding = "2.1"
 pin-project = "0.4.6"
 rand = "0.7"
 regex = "1.3"
-serde = "1.0"
-serde_json = "1.0"
 sha-1 = "0.8"
 slab = "0.4"
+serde = { version = "1.0", features=["derive"] }
+serde_json = "1.0"
 serde_urlencoded = "0.6.1"
+url = "2.1"
 time = { version = "0.2.5", default-features = false, features = ["std"] }
 coo-kie = { version = "0.13.3", package = "cookie", optional = true }
 
