--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -36,9 +36,9 @@ compress = ["flate2", "brotli2"]
 cookie = ["coo-kie", "coo-kie/percent-encode"]
 
 [dependencies]
+ntex-service = { path = "../ntex-service" }
 ntex-web-macros = { path = "../ntex-web-macros" }
 
-actix-service = "1.0.1"
 actix-codec = "0.2.0"
 actix-connect = "1.0.1"
 actix-macros = "0.1.0"
