--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -51,6 +51,7 @@ actix-tls = { version = "1.0.0" }
 base64 = "0.11"
 bitflags = "1.2"
 bytes = "0.5.3"
+bytestring = "0.1.4"
 derive_more = "0.99.2"
 either = "1.5.3"
 encoding_rs = "0.8"
