--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -44,7 +44,6 @@ actix-codec = "0.2.0"
 actix-connect = "1.0.1"
 actix-macros = "0.1.0"
 actix-rt = "1.0.0"
-actix-server = "1.0.0"
 actix-threadpool = "0.3.1"
 actix-tls = { version = "1.0.0" }
 
@@ -64,7 +63,9 @@ indexmap = "1.3"
 lazy_static = "1.4"
 log = "0.4"
 mime = "0.3"
+mio = "0.6.19"
 net2 = "0.2.33"
+num_cpus = "1.11"
 percent-encoding = "2.1"
 pin-project = "0.4.6"
 rand = "0.7"
@@ -80,6 +81,9 @@ coo-kie = { version = "0.13.3", package = "cookie", optional = true }
 open-ssl = { version="0.10", package = "openssl", optional = true }
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
 
+# FIXME: Remove it and use mio own uds feature once mio 0.7 is released
+mio-uds = { version = "0.6.7" }
+
 # compression
 brotli2 = { version="0.3.2", optional = true }
 flate2 = { version = "1.0.13", optional = true }
@@ -87,7 +91,6 @@ flate2 = { version = "1.0.13", optional = true }
 tokio = "0.2.4"
 
 [dev-dependencies]
-actix-server = "1.0.0"
 actix-connect = { version = "1.0.0", features=["openssl"] }
 actix-tls = { version = "1.0.0", features=["openssl"] }
 futures = "0.3.1"
