--- a/ntex/Cargo.toml
+++ b/ntex/Cargo.toml
@@ -24,10 +24,10 @@ path = "src/lib.rs"
 default = []
 
 # openssl
-openssl = ["actix-tls/openssl", "actix-connect/openssl", "open-ssl"]
+openssl = ["actix-connect/openssl", "open-ssl", "tokio-openssl"]
 
 # rustls support
-rustls = ["actix-tls/rustls", "actix-connect/rustls", "rust-tls"]
+rustls = ["actix-connect/rustls", "rust-tls", "webpki", "webpki-roots", "tokio-rustls"]
 
 # enable compressison support
 compress = ["flate2", "brotli2"]
@@ -45,7 +45,6 @@ actix-connect = "1.0.1"
 actix-macros = "0.1.0"
 actix-rt = "1.0.0"
 actix-threadpool = "0.3.1"
-actix-tls = { version = "1.0.0" }
 
 base64 = "0.11"
 bitflags = "1.2"
@@ -78,8 +77,16 @@ serde_urlencoded = "0.6.1"
 url = "2.1"
 time = { version = "0.2.5", default-features = false, features = ["std"] }
 coo-kie = { version = "0.13.3", package = "cookie", optional = true }
+
+# openssl
 open-ssl = { version="0.10", package = "openssl", optional = true }
+tokio-openssl = { version = "0.4.0", optional = true }
+
+# rustls
 rust-tls = { version = "0.16.0", package = "rustls", optional = true }
+webpki = { version = "0.21", optional = true }
+webpki-roots = { version = "0.17", optional = true }
+tokio-rustls = { version = "0.12.0", optional = true }
 
 # FIXME: Remove it and use mio own uds feature once mio 0.7 is released
 mio-uds = { version = "0.6.7" }
@@ -92,7 +99,6 @@ tokio = "0.2.4"
 
 [dev-dependencies]
 actix-connect = { version = "1.0.0", features=["openssl"] }
-actix-tls = { version = "1.0.0", features=["openssl"] }
 futures = "0.3.1"
 env_logger = "0.7"
 serde_derive = "1.0"
