--- a/ntex-router/Cargo.toml
+++ b/ntex-router/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.3.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
 description = "Path router"
 keywords = ["ntex"]
-repository = "https://github.com/fafhrd91/ntex.git"
+repository = "https://github.com/ntex-rs/ntex.git"
 documentation = "https://docs.rs/ntex-router/"
 license = "MIT"
 edition = "2018"
@@ -19,10 +19,10 @@ default = ["http"]
 [dependencies]
 regex = "1.3.5"
 serde = "1.0.105"
-bytestring = "0.1.2"
+bytestring = "0.1.5"
 log = "0.4.8"
-http = { version = "0.2.0", optional = true }
+http = { version = "0.2.1", optional = true }
 
 [dev-dependencies]
-http = "0.2.0"
+http = "0.2.1"
 serde_derive = "1.0"
