--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 members = [
   "ntex",
   "ntex-codec",
-  "ntex-macros",
   "ntex-router",
   "ntex-rt",
+  "ntex-rt-macros",
   "ntex-service",
   # "ntex-web-macros",
 ]
@@ -12,8 +12,8 @@ members = [
 [patch.crates-io]
 ntex = { path = "ntex" }
 ntex-codec = { path = "ntex-codec" }
-ntex-macros = { path = "ntex-macros" }
 ntex-router = { path = "ntex-router" }
 ntex-rt = { path = "ntex-rt" }
+ntex-rt-macros = { path = "ntex-rt-macros" }
 ntex-service = { path = "ntex-service" }
 ntex-web-macros = { path = "ntex-web-macros" }
