--- a/ntex-rt/Cargo.toml
+++ b/ntex-rt/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ntex-rt"
-version = "1.0.0"
+version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix runtime"
+description = "ntex runtime"
 keywords = ["network", "framework", "async", "futures"]
 homepage = "https://ntex.rs"
 repository = "https://github.com/ntex-rs/ntex.git"
@@ -16,7 +16,7 @@ name = "ntex_rt"
 path = "src/lib.rs"
 
 [dependencies]
-ntex-macros = "0.1.0"
+ntex-rt-macros = "0.1.0"
 actix-threadpool = "0.3"
 futures = "0.3.1"
 tokio = { version = "0.2.6", default-features=false, features = ["rt-core", "rt-util", "io-driver", "tcp", "uds", "udp", "time", "signal", "stream"] }
