--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
   "ntex-rt",
   "ntex-rt-macros",
   "ntex-service",
-  # "ntex-web-macros",
+  "ntex-macros",
 ]
 
 [patch.crates-io]
@@ -16,4 +16,4 @@ ntex-router = { path = "ntex-router" }
 ntex-rt = { path = "ntex-rt" }
 ntex-rt-macros = { path = "ntex-rt-macros" }
 ntex-service = { path = "ntex-service" }
-ntex-web-macros = { path = "ntex-web-macros" }
+ntex-macros = { path = "ntex-macros" }
